<?xml version="1.0"?>
<package format="2">
  <name>hakuroukun_hardware_gazebo</name>
  <version>0.0.0</version>
  <description>The hakuroukun_hardware_gazebo package</description>

  <maintainer email="musashi@todo.todo">DND</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>roscpp</depend>

  <build_depend>gazebo</build_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros_control plugin="${prefix}/hakuroukun_hardware_gazebo_plugins.xml"/>

  </export>
</package>
